--- a/language/SI.json
+++ b/language/SI.json
@@ -201,8 +201,8 @@
             "NEED_TEXT_SONG": "*කරුණාකර ගීතයක් කියන්න!*\n*උදාහරණයක්:* ```.song kelinma ahanna ayya song```",
             "NO_RESULT": "*මට කිසිවක් සොයාගත නොහැකි විය. :(*",
             "YTS": "_📡 පදනම් කරගත් වෙබ් අඩවිය : YouTube_",
-            "DOWNLOADING_SONG": "\n```🔄 ඔබේ ගීතය download කරමින් පවති...```\n",
-            "UPLOADING_SONG": "\n```🔂 ඔබේ ගීතය upload කරමින් පවති...```\n",
+            "DOWNLOADING_SONG": "\n```🔄 123ඔබේ ගීතය download කරමින් පවති...```\n",
+            "UPLOADING_SONG": "\n```🔂 123ඔබේ ගීතය upload කරමින් පවති...```\n",
             "VIDEO_DESC": "යූ ටියුබ් වෙතින් වීඩියෝ බාගත කරයි.",
             "NEED_VIDEO": "*කරුණාකර වීඩියෝ link එකක් ලියන්න!*\n*උදාහරණයක්:* .video https://www.youtube.com/watch?v=cXcQMXC66c4",
             "DOWNLOADING_VIDEO": "\n```🔄 ඔබගේ වීඩියෝව download කරමින් පවති...```\n",
